Bug 691210 - Bits of image missing
Summary: Bits of image missing
Status: NOTIFIED FIXED
Alias: None
Product: jbig2dec
Classification: Unclassified
Component: Rendering (show other bugs)
Version: unspecified
Hardware: PC All
: P2 normal
Assignee: Robin Watts
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-24 05:29 UTC by Marcos H. Woehrmann
Modified: 2012-04-12 17:13 UTC (History)
2 users (show)

See Also:
Customer: 850
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2010-03-24 05:29:36 UTC
When the attached file is converted using Ghostscript head (r10959) there are bits missing when compared to opening the file in Adobe Acrobat 9.3.1 or Apple Preview.

The appearance of the output changed with r10362 and r10372.

Command line I'm using:

  bin/gs -sDEVICE=ppmraw -o test.ppm ./45816.pdf
Comment 2 Alex Cherepanov 2010-03-25 05:35:25 UTC
This bug is caused by the interaction of /Interpolate flag and masked image.
Running the file with -dNOINTERPOLATE restores normal rendering.
This is not a JPXDecode problem.
Comment 3 Michael Vrhel 2010-07-07 03:39:33 UTC
Created attachment 6436 [details]
simplied file

Simplified file that contains only the troubled image. Will take a closer look at the interpolation code to see what the issue is
Comment 4 Michael Vrhel 2011-05-03 16:43:32 UTC
Passing to Robin to investigate since he has been working on interpolation.
Comment 5 Robin Watts 2011-05-24 18:30:56 UTC
This bug isn't actually to do with interpolation, it's to do with a long standing bug in the bitmap mask clip device that I fixed back in SVN revision 11918 (git hash = e5757ee).

As such this is now fixed and can be closed.